2016-01-07  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.14 released.

2016-01-07  c.hetherington  <cth@carlh.net>

	* Sort image files added using "Add file(s)..." alphabetically
	rather than trying to find numbers in the filenames.

2016-01-07  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.13 released.

2016-01-07  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.12 released.

2016-01-06  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

	* Version 2.6.11 released.

2016-01-06  c.hetherington  <cth@carlh.net>

	* New sk_SK translation from Tomáš Hlaváč.

2015-12-23  Carl Hetherington  <cth@carlh.net>

	* Add basic search function to KDM creator screens list (#739).

	* Version 2.6.10 released.

2015-12-23  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Version 2.6.9 released.

2015-12-23  Carl Hetherington  <cth@carlh.net>

	* Add stored list of DKDMs to KDM creator (#767).

2015-12-22  Carl Hetherington  <cth@carlh.net>

	* Fix hang when removing screens in some cases.

2015-12-21  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.8 released.

2015-12-21  c.hetherington  <cth@carlh.net>

	* Reduce frequency of temporary writes to disk (#748).

	* Use new Dolby website for both Doremi and Dolby certificates (#775).

2015-12-18  c.hetherington  <cth@carlh.net>

	* Fix double-calculation of DCP hashes.

	* Add hint about making non-24/48 FPS Interop DCPs.

2015-12-15  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* Updated nl_NL translation from Rob van Niuewkerk.

2015-12-11  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.7 released.

2015-12-11  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.6 released.

2015-12-06  Carl Hetherington  <cth@carlh.net>

	* Add menu option to send a project to the
	batch converter (#770).

2015-12-10  Carl Hetherington  <cth@carlh.net>
