@@ -1,3 +1,7 @@
+2016-01-08  c.hetherington  <cth@carlh.net>
+
+	* Don't expand all cinemas on opening KDM dialogs (#779).
+
 2016-01-07  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.6.14 released.
